# modbase

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: identity.cmake
cmake/utils/: qvm_tools.cmake
code/botlib/: be_ai_goal.c
code/cgame/: cg_consolecmds.c  cg_draw_no_missionpack.c  cg_effects.c  cg_ents.c  cg_event.c  cg_local.h  cg_main.c  cg_newdraw.c  cg_players.c  cg_servercmds.c  cg_view.c  cg_weapons.c
code/game/: ai_chat.c  ai_cmd.c  ai_dmnet.c  ai_dmq3.c  ai_dmq3.h  ai_main.c  ai_team.c  ai_vcmd.c  bg_misc.c  bg_pmove.c  g_active.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_local.h  g_main.c  g_misc.c  g_missile.c  g_rankings.h  g_team.c  g_team.h  g_weapon.c  inv.h
code/qcommon/: q_platform.h
code/ui/: ui_atoms.c  ui_gameinfo.c  ui_main.c  ui_shared.c
